# fate

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
predictions/: action.txt  advice.txt  subject.txt  syscalls.txt  target.txt
src/: fate.c
tarot/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
